--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ Data_Bank
 wandb
 Models_Parameters_Log
 Handwritten_tex_experiment.py
+Handwritten_Data_Server.py
+Handwritten_Test.ipynb
 
 
 # Byte-compiled / optimized / DLL files
