added handwritten test modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 Data_Bank
 wandb
 Models_Parameters_Log
-# Handwritten_tex_experiment.py
-# Handwritten_Data_Server.py
+Handwritten_tex_experiment.py
+Handwritten_Data_Server.py
 Handwritten_Test.ipynb
 
 
