added handwritten test modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 Data_Bank
 wandb
 Models_Parameters_Log
-Handwritten_tex_experiment.py
-Handwritten_Data_Server.py
-Handwritten_Test.ipynb
+# Handwritten_tex_experiment.py
+# Handwritten_Data_Server.py
+# Handwritten_Test.ipynb
 
 
 # Byte-compiled / optimized / DLL files
