added handwritten test modules

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ wandb
 Models_Parameters_Log
 # Handwritten_tex_experiment.py
 # Handwritten_Data_Server.py
-# Handwritten_Test.ipynb
+Handwritten_Test.ipynb
 
 
 # Byte-compiled / optimized / DLL files
