--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ Models_Parameters_Log
 # Handwritten_tex_experiment.py
 # Handwritten_Data_Server.py
 Handwritten_Test.ipynb
-
+Handwritten_Processing_Work_LOCAL.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
