--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 Data_Bank
 wandb
 Models_Parameters_Log
-# Handwritten_tex_experiment.py
+# Handwritten_Data_module.py
 # Handwritten_Data_Server.py
 Handwritten_Test.ipynb
 Handwritten_Processing_Work_LOCAL.ipynb
