--- a/serverless_api/Dockerfile
+++ b/serverless_api/Dockerfile
@@ -3,13 +3,14 @@
 FROM public.ecr.aws/lambda/python:3.9
 
 # Install Python dependencies
-COPY requirements/prod.txt ./requirements.txt
+COPY production_reqs.txt ./requirements.txt
 RUN pip install --upgrade pip==22.0.4
-RUN pip install -r production_reqs.txt
+RUN pip install -r requirements.txt
 
 # Copy only the relevant directories and files
 #   note that we use a .dockerignore file to avoid copying logs etc.
 COPY Tokenizer/ ./Tokenizer
-COPY server_api/ ./api
+COPY serverless_api/ ./serverless_api
+COPY Models_Parameters_Log/scripted_model1.pt ./Models_Parameters_Log/scripted_model1.pt
 
-CMD ["api.handler"]
+CMD ["serverless_api/app.handler"]
